tests/ui/rfcs/rfc-2126-crate-paths/keyword-crate-as-identifier.stderr
error[E0532]: cannot find unit struct, unit variant or constant `crate` in this scope
  --> $DIR/keyword-crate-as-identifier.rs:2:9
   |
LL |     let crate = 0;
   |         ^^^^^ not found in this scope
   |
   = note: a module named `crate` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0532`.
