tests/ui/rfcs/rfc-2126-crate-paths/keyword-crate-as-identifier.rs
fn main() {
    let crate = 0;
    //~^ ERROR cannot find unit struct, unit variant or constant `crate` in this scope
}
